patches/typeid1
Bottom: 9477f5e9874d07f0df4725936e90e47570763555
Top:    9477f5e9874d07f0df4725936e90e47570763555
Author: scott snyder <sss@karma>
Date:   2022-12-05 12:08:16 -0500

Suppress warnings about reference to temporary from typeid.

This source

```
class C {};
static const std::type_info& typeInfo() {				
  return typeid (C);
}									
```

gives a warning:

```
$ home/sss/cppcheck/inst/bin/cppcheck            x.cc
Checking x.cc ...
x.cc:3:17: error: Reference to temporary returned. [returnTempReference]
  return typeid (C);
                ^
```

Work around with a special case.
